--- a/Backend/package.json
+++ b/Backend/package.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
+    "dotenv": "^17.2.0",
+    "ejs": "^3.1.10",
     "express": "^5.1.0",
     "node": "^20.19.4",
     "nodemon": "^3.1.10"
